1.02.23 (12-1-2006)
Bugfix: Sometimes when paused, 'go' is unavailable.
Added pause message to play area for when 'go' is paused (instead of just when 'record' is paused.)
Bugfix: When energy vs position graph is copied, if the data is off-the-chart, it comes up bogus.
Relabeled the "show pie chart" checkbox to "show pie chart".
Added a legend item for black potential energy.
Bugfix: Energy vs time chart has 'java application window' covering up the good parts.
        This window has a bigger default height.
Bugfix: Reset from space causes crash.
Added more key options: 'a' for add skater, 'd' for delete, 'r' for remove
Added an onscreen zoom button.
Moved pie chart legend to top-right.
Bugfix: In E vs. T graph, rescaling the y axis shouldn't center on the E=0 axis.
Bugfix: For E vs T. graph (and maybe other graphs), should have moving man style zoom buttons.
Bugfix: The skater falls through the ground outside the range -10 to +10
        Extended the range of the ground to -100 to +100 (handles most cases with current camera zoom)

1.02.22 (11-29-2006)
Bugfix: when entering playback mode, floor track duplicated.
Bugfix: Record, pause, switch location, go should remain in the newly selected location.
        Now 'Go' doesn't initialize to the last-recorded-state before starting.
Bugfix: Pausing 'go' then pressing 'playback' should have 'slow' enabled.
Energy vs. Position graph 'copies' stay in front of the simulation frame.
Energy vs. Position graph changed text-labeled zoom buttons to magnifying glass icons.

1.02.21 (11-29-2006)
Removed the floor from outer space.
        Stretched outer-space graphic to fit screen without floor graphic.
Set color of ground to match location (i.e. earth is green, moon is gray).
The skater points his feet toward the closest track when the user is dragging him.
Changed "Friction>>" to "Track Friction>>" for the friction button.
Changed "Record Path" from a checkbox to a button.
"Record Path" was moved below the tool checkboxes.